add gleitender Mittelwert, correct perspective of written text (grammar stuff)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -231,3 +231,12 @@
   ISBN = {}, 
   keywords = {lit},
 }
+
+@ONLINE{lit:mittelung_eth,
+  url = {http://www.mmm.ethz.ch/dok01/d0000142.pdf },
+  title = {Rekursive Mittelung Arithmetischer Mittelungswert},
+  author = {Ruhm K. H. ETH Z"urich},
+  urldate = {2014-06-15},
+  year = {2014},
+  keywords = {lit},
+}
