add image of the teststructure

--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -419,8 +419,9 @@ Die Integration erfolgt wie bereits im Kapitel \vref{ch:grundlagen} im Abschnitt
 	\subsection{Material/Testumgebung}
 		Für eine aussagekräftige Messung muss eine Kniebewegung möglichst exakt nachgebildet werden können. Weiter sollten die Messungen reproduzierbar sein. Für diesen Zweck wurde eigens eine Mechanik konstruiert und aufgebaut.\par 
 		%
-		Der Simulator basiert auf Bosch-Profilen\footnote{Hergestellt von der Firma Bosch Rexroth AG: \url{http://www.boschrexroth.com}} und ist durch das sehr anpassbar. Der Aufbau erlaubt es einen vollständigen statischen Bewegungsablauf nachzubilden, jedoch ohne die horizontal Rotation zu berücksichtigen. Für eine konstante Geschwindigkeit des Ablaufs sorgt ein DC-Motor mit Rutschkupplung. Dieser wird mit einem DC-Netzteil gespiesen, was zugleich eine Steuerung der Geschwindigkeit ermöglicht (durch Variation der Spannung). Die Befestigung des \gls{g:myrio} erfolgt auf einer Platte, die wiederum auf dem Schwenkarm angebracht. Für das errechnen der Bewegungsbahn wird ausserdem ein Winkelmessgerät angebracht, das eine absolute Messung des Winkels erlaubt. Der komplette Aufbau ist in der Abbildung XXX ersichtlich, wohingegen die Tabelle \vref{tab:messmittel_tran_rot} alle verwendeten Messinstrumente enthält.
+		Der Simulator basiert auf Bosch-Profilen\footnote{Hergestellt von der Firma Bosch Rexroth AG: \url{http://www.boschrexroth.com}} und ist durch das sehr anpassbar. Der Aufbau erlaubt es einen vollständigen statischen Bewegungsablauf nachzubilden, jedoch ohne die horizontal Rotation zu berücksichtigen. Für eine konstante Geschwindigkeit des Ablaufs sorgt ein DC-Motor mit Rutschkupplung. Dieser wird mit einem DC-Netzteil gespiesen, was zugleich eine Steuerung der Geschwindigkeit ermöglicht (durch Variation der Spannung). Die Befestigung des \gls{g:myrio} erfolgt auf einer Platte, die wiederum auf dem Schwenkarm angebracht. Für das errechnen der Bewegungsbahn wird ausserdem ein Winkelmessgerät angebracht, das eine absolute Messung des Winkels erlaubt. Der komplette Aufbau ist in der Abbildung \vref{img:messaufbau_tran_rot} ersichtlich, wohingegen die Tabelle \vref{tab:messmittel_tran_rot} alle verwendeten Messinstrumente enthält.
 		%
+		\image{content/3_konzept/image/messaufbau_tran_rot}{scale=0.2}{htbp}[Messaufbau Translation, Rotation überlagert][img:messaufbau_tran_rot]
 		\input{content/3_konzept/table/messmittel_tran_rot}	
 	%
 	%
